--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project (jin)
 set (CMAKE_CXX_STANDARD 14)
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -03")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
 set (SFML_ROOT "/usr/include/SFML")
@@ -30,5 +30,5 @@ else()
     message("SFML library not found")
 endif()
 
-add_executable (program ${SOURCE_FILES ${HEADER_FILES}})
+add_executable (program ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries (program ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
